--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Abhishek Nagekar
-description: Web & Security Engineer
-site_title: '@abhn - Abhishek Nagekar'
+title: abc
+description: eee
+site_title: 'aaa'
 
 # Build settings
 markdown: kramdown
